--- a/DBSK/pom.xml
+++ b/DBSK/pom.xml
@@ -27,6 +27,12 @@
 	    <artifactId>JDA</artifactId>
 	    <version>3.7.1_409</version>
 	</dependency>
+	
+	  <dependency>
+	    <groupId>com.sedmelluq</groupId>
+	    <artifactId>lavaplayer</artifactId>
+	    <version>1.3.7</version>
+	  </dependency>
     
   </dependencies>
   
@@ -36,6 +42,13 @@
 	    <name>jcenter-bintray</name>
 	    <url>http://jcenter.bintray.com</url>
 	</repository>
+	
+	  <repository>
+	    <id>central</id>
+	    <name>bintray</name>
+	    <url>http://jcenter.bintray.com</url>
+	  </repository>
+	
   </repositories>
 
   
